--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Document</title> <style>
+		body
+		{
+			background-color: white;
+			color: black;
+			text-align: center;
+
+		}
+	</style>
 </head>
 <body>
-<h5>Eba</h5>
+<h1>Eba</h1>
 <p>Olá Mundo</p>	
 </body>
 </html>
