--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title> <style>
-		body
-		{
-			background-color: white;
-			color: black;
-			text-align: center;
-
-		}
-	</style>
+	<title>Site</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <h1>Eba</h1>
