--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-<h1>Eba</h1>
-<p>Olá Mundo</p>	
+<h1>Glaive</h1>
+<p>Bem-vindo</p>	
 </body>
 </html>
