--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1>Glaive</h1>
-<img src="img/bannermusic.png" alt="foto musica">
+<img src="img/bannermusic.png" alt="foto musica" width="455" height="500">
 <p>Bem-vindo</p>	
 </body>
 </html>
